--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -16,7 +16,23 @@ Console SaaS users can try out v14.1.0 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
+## Mia-Assistant gets smarter with real-time Console data via MCP Server
+
+Mia-Assistant can now provide more accurate and contextual answers by connecting directly to your Console project configurations through the Model Context Protocol (MCP) Server.
+This enhancement allows the Assistant to retrieve up-to-date information from your configurations, improving the precision and relevance of its responses.
+
+Thanks to this integration, Mia-Assistant becomes an even more powerful support tool, giving you immediate insights based on your actual project state!
+
+To discover more, visit [Mia-Assistant documentation page](/).
+
 ## Console
+
+### Environment Based Configuration Management as Closed Preview
+
+The Environment Based Configuration Management feature, introduced in Beta with **v14.0.0**, will now be available as **Closed Preview** only.
+This will allow us to focus on gathering feedback and improving the final user experience before a wider rollout. As a result, automatic migration of Enhanced projects is temporarily disabled, and existing migrated projects will be reverted.
+
+In the meantime, if you are interested in trying out this beta feature, you can reach out to your Mia-Platform referent.
 
 ### Improvements
 
