feat: updates on the v14.1.0 release note

--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -16,14 +16,15 @@ Console SaaS users can try out v14.1.0 latest improvements in Preview! Open a Se
 For self-hosted installations, please read the [following guidelines](#how-to-update-your-console).
 :::
 
-## Mia-Assistant gets smarter with real-time Console data via MCP Server
+## Mia-Assistant gets smarter with real-time Console data via Console MCP Server
 
-Mia-Assistant can now provide more accurate and contextual answers by connecting directly to your Console project configurations through the Model Context Protocol (MCP) Server.
-This enhancement allows the Assistant to retrieve up-to-date information from your configurations, improving the precision and relevance of its responses.
+Mia-Assistant is now a fully operational agent that uses the [Mia-Platform Console MCP Server](https://github.com/mia-platform/console-mcp-server) to access the Console API. This enables it to retrieve information about your company, check the Marketplace, debug your services, fix problems, and automatically perform deployments, all simply by chatting.
 
-Thanks to this integration, Mia-Assistant becomes an even more powerful support tool, giving you immediate insights based on your actual project state!
+As always, it will continue to be your helpful assistant, explaining concepts and planning strategies based on best practices and examples from the official documentation.
 
-To discover more, visit [Mia-Assistant documentation page](/).
+Finally, you can also pin the Mia-Assistant pop-up to the side to keep it open while you work on your projects.
+
+To discover more, visit the [Mia-Assistant documentation page](/console/assistant/overview.md).
 
 ## Console
 
