--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -18,11 +18,11 @@ For self-hosted installations, please read the [following guidelines](#how-to-up
 
 ## Mia-Assistant gets smarter with real-time Console data via Console MCP Server
 
-Mia-Assistant is now a fully operational agent that uses the [Mia-Platform Console MCP Server](https://github.com/mia-platform/console-mcp-server) to access the Console API. This enables it to retrieve information about your company, check the Marketplace, debug your services, fix problems, and automatically perform deployments, all simply by chatting.
+Mia-Assistant is now a fully operational agent that uses the [Mia-Platform Console MCP Server](https://github.com/mia-platform/console-mcp-server) to access the Console APIs. This enables to retrieve information about your Company, check the Marketplace, debug your services, fix problems, and automatically perform deployments, all simply by chatting.
 
 As always, it will continue to be your helpful assistant, explaining concepts and planning strategies based on best practices and examples from the official documentation.
 
-Finally, you can also pin the Mia-Assistant pop-up to the side to keep it open while you work on your projects.
+To better help you have Mia-Assistant as a proper companion, you can now also pin the chatbot pop-up to the side of Console, to keep it open while you work on your Projects.
 
 To discover more, visit the [Mia-Assistant documentation page](/console/assistant/overview.md).
 
