--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -22,9 +22,12 @@ Mia-Assistant is now a fully operational agent that uses the [Mia-Platform Conso
 
 As always, it will continue to be your helpful assistant, explaining concepts and planning strategies based on best practices and examples from the official documentation.
 
-To better help you have Mia-Assistant as a proper companion, you can now also pin the chatbot pop-up to the side of Console, to keep it open while you work on your Projects.
-
 To discover more, visit the [Mia-Assistant documentation page](/console/assistant/overview.md).
+
+## Pin Mia-Assistant and keep it always available by your side
+
+You can now pin the Mia-Assistant chat to keep it open by your side while working in Console.  
+This allows you to interact with AI without interrupting your workflow, making it a constant companion ready to support you throughout your daily tasks!
 
 ## Console
 
@@ -36,6 +39,11 @@ This will allow us to focus on gathering feedback and improving the final user e
 In the meantime, if you are interested in trying out this beta feature, you can reach out to your Mia-Platform referent.
 
 ### Improvements
+
+#### Azure DevOps now supported for Infrastructure Projects
+
+Infrastructure Projects now support Azure DevOps as a Git provider.  
+This addition allows you to manage your infrastructure configurations directly through Azure DevOps repositories, extending the flexibility of your Git provider integrations.
 
 #### 
 
