feat: image in rn

--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -24,6 +24,8 @@ As always, it will continue to be your helpful assistant, explaining concepts an
 
 Finally, you can also pin the Mia-Assistant pop-up to the side to keep it open while you work on your projects.
 
+![Mia-Assistant pinned to the right](img/pinned-assistant.png)
+
 To discover more, visit the [Mia-Assistant documentation page](/console/assistant/overview.md).
 
 ## Console
