--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -45,6 +45,8 @@ In the meantime, if you are interested in trying out this beta feature, you can 
 Infrastructure Projects now support Azure DevOps as a Git provider.  
 This addition allows you to manage your infrastructure configurations directly through Azure DevOps repositories, extending the flexibility of your Git provider integrations.
 
+To discover more, visit the related [documentation page](/console/project-configuration/infrastructure-project.md)
+
 #### 
 
 ## Fast Data
