--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -54,16 +54,6 @@ This addition allows you to manage your infrastructure configurations directly t
 
 To discover more, visit the related [documentation page](/console/project-configuration/infrastructure-project.md)
 
-#### 
-
-## Fast Data
-
-### 
-
-## Microfrontend Composer
-
-### 
-
 ## Marketplace
 
 ### Marketplace Updates
@@ -78,4 +68,4 @@ The Integration Connector Agent received new updates to enable:
 
 ## How to update your Console
 
-For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `vX.X.X-beta.0`.
+For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.0-beta.0`.
