Add back-kit fix

--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -54,6 +54,16 @@ This addition allows you to manage your infrastructure configurations directly t
 
 To discover more, visit the related [documentation page](/console/project-configuration/infrastructure-project.md)
 
+### Back-Lit Library
+
+The new version `v1.5.20` of the back-kit library is available!
+
+Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for finer-grained details of new versions.
+
+#### Bug Fix
+
+- Fixed partial date format on `bk-form-wizard` component
+
 ## Marketplace
 
 ### Marketplace Updates
