--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -47,7 +47,7 @@ In the meantime, if you are interested in trying out this beta feature, you can 
 Infrastructure Projects now support Azure DevOps as a Git provider.  
 This addition allows you to manage your infrastructure configurations directly through Azure DevOps repositories, extending the flexibility of your Git provider integrations.
 
-To discover more, visit the related [documentation page](/console/project-configuration/infrastructure-project.md)
+To discover more, visit the related [documentation page](/console/project-configuration/infrastructure-project.md).
 
 ### Back-Lit Library
 
@@ -57,7 +57,7 @@ Refer to back-kit [changelog](/microfrontend-composer/back-kit/changelog.md) for
 
 #### Bug Fix
 
-- Fixed partial date format on `bk-form-wizard` component
+* Fixed partial date format on `bk-form-wizard` component
 
 ## Marketplace
 
