--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -71,6 +71,7 @@ The Integration Connector Agent received new updates to enable:
 - receiving events from GitHub webhooks
 - build custom processors with Golang code, thanks to the new `rpc-plugin` processors and the [Integration Connector Agent Processor Template](https://github.com/mia-platform-marketplace/integration-connector-agent-processor)
 
+To learn more about all the features and how to configure it, visit the [official documentation](/runtime_suite/integration-connector-agent/10_overview.md).
 ## How to update your Console
 
 For self-hosted installations, please head to the [self hosted upgrade guide](/infrastructure/self-hosted/installation-chart/100_how-to-upgrade.md) or contact your Mia-Platform referent and upgrade to _Console Helm Chart_ `v15.0.0-beta.0`.
