feat: add image

--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -22,6 +22,8 @@ Mia-Assistant is now a fully operational agent that uses the [Mia-Platform Conso
 
 As always, it will continue to be your helpful assistant, explaining concepts and planning strategies based on best practices and examples from the official documentation.
 
+![Example of answer using MCP](img/mcp-response.png)
+
 To discover more, visit the [Mia-Assistant documentation page](/console/assistant/overview.md).
 
 ## Pin Mia-Assistant and keep it always available by your side
