--- a/docs/release-notes/v14.1.0.md
+++ b/docs/release-notes/v14.1.0.md
@@ -51,6 +51,12 @@ This addition allows you to manage your infrastructure configurations directly t
 
 To discover more, visit the related [documentation page](/console/project-configuration/infrastructure-project.md).
 
+#### Improved customization of Marketplace items
+
+From now on, for on-premise installations, it is possible to define a set of regex rules to apply during [MarketplaceSync job](/infrastructure/self-hosted/installation-chart/helm-values/45_marketplace.md) with corresponding replacement values directly in the Helm chart. This allows you to precisely rewrite image registry paths as needed.
+
+For more details, check out the [documentation](/marketplace/overview_marketplace.md#edit-mia-platform-catalog-items).
+
 ### Back-Lit Library
 
 The new version `v1.5.20` of the back-kit library is available!
