--- a/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
+++ b/docs/console/tutorials/infrastructure-project/visualize-infrastructure-project-components-runtime-data-in-console.mdx
@@ -37,14 +37,18 @@ Therefore, to reach this goal, we will have to set up the following components:
 
 ### Set up Cloud Provider integration
 
-As mentioned above, we will need to create some resources in the Cloud Provider to receive events from it.
+As mentioned above, we will need to create some resources in the Cloud Provider in order to receive events from it.
 
 Each Cloud Provider has its own way to send events, so you will have to follow the specific instructions for your Cloud Provider.
 
-:::tip
-To create such resources, we have created a set of Terraform modules that will help you prepare the cloud provider environment.
+:::info
+To set up the Cloud Provider resources that will send events to your Integration Connector Agent instance, we have prepared a set of Terraform modules that will assist you,
+you can find them in the [GitHub Mia-Platform Terraform Integration Connector Agent](https://github.com/mia-platform/terraform-integration-connector-agent) repository.
+:::
 
-Ask your Mia-Platform referent to get access to it!
+:::tip
+You can use an [Infrastructure Project](/console/project-configuration/infrastructure-project.md) to
+provision these resources in your Cloud Provider, just like you would do with any other terraform module.
 :::
 
 <Tabs>
@@ -54,6 +58,20 @@ You will need to:
 - create a new CloudTrail
 - create a new SQS queue that will be used to receive events by the Integration Connector Agent
 - create a new EventBridge rule that will listen to the CloudTrail events and send them to the SQS queue
+
+Create your terraform module using the following code snippet:
+
+```go
+module "aws" {
+  source = "github.com/mia-platform/terraform-integration-connector-agent//modules/aws"
+
+  cloudtrail_name = "awesome-cloudtrail-name"
+  cloudtrail_bucket_name = "awesome-bucket-name"
+
+  eventbridge_rule_name = "awesome-rule-name"
+  sqs_queue_name = "awesome-queue-name"
+}
+```
 
 :::info
 Find out more about the specific steps to create these resources in the [Integration Connector Agent documentation](/runtime_suite/integration-connector-agent/use-cases/infrastructure-import/20_aws_infrastructure_import.md).
@@ -68,6 +86,17 @@ You will need to:
 - create a Pub/Sub topic that will be used to receive events by the Integration Connector Agent
 - create a feed to send events from the Asset Management API to the Pub/Sub topic
 
+Create your terraform module using the following code snippet:
+
+```go
+module "gcp" {
+  source = "github.com/mia-platform/terraform-integration-connector-agent//modules/google"
+
+  pubsub_topic_name = "awesome-topic-name"
+  cloud_asset_feed_id = "awesome-feed-id"
+}
+```
+
 :::info
 Find out more about the specific steps to create these resources in the [Integration Connector Agent documentation](/runtime_suite/integration-connector-agent/use-cases/infrastructure-import/10_gcp_infrastructure_import.md).
 :::
@@ -81,6 +110,22 @@ You will need to:
 - create a new eventhub
 - create a monitor diagnostic settings for exporting administrative log to the created eventhub
 - create a storage account with a blob container
+
+Create your terraform module using the following code snippet:
+
+```go
+module "azure" {
+  source = "github.com/mia-platform/terraform-integration-connector-agent//modules/azurerm"
+
+  resource_group = "awesome-resource-group"
+  activity_log_diagnostic_setting_name = "awesome-diagnostic-setting-name"
+
+  eventhub_namespace_name = "awesome-eventhub-namespace"
+  eventhub_name = "awesome-eventhub-name"
+
+  eventhub_checkpoint_storage_name = "awesome-storage-account-name"
+}
+```
 
 :::info
 Find out more about the specific steps to create these resources in the [Integration Connector Agent documentation](/runtime_suite/integration-connector-agent/use-cases/infrastructure-import/30_azure_infrastructure_import.md).
@@ -128,7 +173,7 @@ You can find more information about this item type in the [Catalog documentation
     {
       "source": {
         "type": "aws-cloudtrail-sqs",
-        "queueUrl": "https://sqs.REGION.amazonaws.com/ACCOUNT_ID/QUEUE_NAME",
+        "queueUrl": "https://sqs.REGION.amazonaws.com/ACCOUNT_ID/awesome-queue-name",
         "region": "REGION",
         "accessKeyId": "{{AWS_ACCESS_KEY_ID}}",
         "secretAccessKey": { "fromEnv": "AWS_SECRET_ACCESS_KEY" },
@@ -191,7 +236,7 @@ You can find more information about this item type in the [Catalog documentation
       "source": {
         "type": "gcp-inventory-pubsub",
         "projectId": "GCP_PROJECT_ID",
-        "topicName": "GPC_PUBSUB_TOPIC_NAME",
+        "topicName": "awesome-topic-name",
         "subscriptionId": "GCP_PUBSUB_SUBSCRIPTION_ID",
         "ackDeadlineSeconds": 15,
         "credentialsJson": { "fromEnv": "GCP_CREDENTIALS_JSON" },
@@ -253,10 +298,10 @@ You can find more information about this item type in the [Catalog documentation
       "source": {
         "type": "azure-activity-log-event-hub",
         "subscriptionId": "AZURE_SUBSCRIPTION_ID",
-        "eventHubNamespace": "AZURE_EVENT_HUB_NAMESPACE",
-        "eventHubName": "AZURE_EVENT_HUB_NAME",
-        "checkpointStorageAccountName": "AZURE_CHECKPOINT_STORAGE_ACCOUNT_NAME",
-        "checkpointStorageContainerName": "AZURE_CHECKPOINT_STORAGE_CONTAINER_NAME",
+        "eventHubNamespace": "awesome-eventhub-namespace",
+        "eventHubName": "awesome-eventhub-name",
+        "checkpointStorageAccountName": "awesome-storage-account-name",
+        "checkpointStorageContainerName": "awesome-storage-container-name",
         "tenantId": "AZURE_TENANT_ID",
         "clientId": { "fromEnv": "AZURE_CLIENT_ID" },
         "clientSecret": { "fromEnv": "AZURE_CLIENT_SECRET" },
